--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
     <header>
 
-        <img src="images/logo_krhacken_invert2.png" alt="logo_krhackademy" width="40" height="40"/>
+        <a href="./index.html"><img src="images/logo_krhacken_invert2.png" alt="logo_krhackademy" width="40" height="40"/></a>
         
-        <h1 class="title">Kr[HACK]ademy</h1>
+        <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
 
         <div class="header-right">
             <nav>
                 <ul>
-                    <li active><a href="/">ACCUEIL</a></li>
-                    <li><a href="/lessons.html">LEÇONS</a></li>
+                    <li active><a href="./index.html">ACCUEIL</a></li>
+                    <li><a href="#lessons">LEÇONS</a></li>
                     <li><a href="#projects">PROJETS</a></li>
                     <li><a href="#challenges">DÉFIS</a></li>
 
