MObile menu hamburger (non fonctionnel)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
                 </ul>
             </nav>
-
+            <div class="menu-toggle" id="mobile-menu">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
 
     </header>
