--- a/index.html
+++ b/index.html
@@ -16,26 +16,32 @@
 <body>
 
     <header>
-
-        <a href="./index.html"><img src="images/logo_krhacken_invert2.png" alt="logo_krhackademy" width="40" height="40"/></a>
-        
-        <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
-
-        <div class="header-right">
-            <nav>
-                <ul>
-                    <li active><a href="./index.html">ACCUEIL</a></li>
-                    <li><a href="#lessons">LEÇONS</a></li>
-                    <li><a href="#projects">PROJETS</a></li>
-                    <li><a href="#challenges">DÉFIS</a></li>
-
-                </ul>
-            </nav>
-            <div class="menu-toggle" id="mobile-menu">
-                <i class="fas fa-bars"></i>
+        <div class="header-computer">
+            <a href="./index.html"><img src="images/logo_krhacken_invert2.png" alt="logo_krhackademy" width="40" height="40"/></a>
+            <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
+            <div class="header-right">
+                <nav>
+                    <ul>
+                        <li active><a href="./index.html">ACCUEIL</a></li>
+                        <li><a href="#lessons">LEÇONS</a></li>
+                        <li><a href="#projects">PROJETS</a></li>
+                        <li><a href="#challenges">DÉFIS</a></li>
+                    </ul>
+                </nav>
+                <div class="menu-toggle" id="mobile-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
         </div>
-
+        <!-- Menu mobile caché par défaut -->
+        <nav class="header-mobile-right" id="mobile-nav">
+            <ul>
+                <li><a href="./index.html">ACCUEIL</a></li>
+                <li><a href="#lessons">LEÇONS</a></li>
+                <li><a href="#projects">PROJETS</a></li>
+                <li><a href="#challenges">DÉFIS</a></li>
+            </ul>
+        </nav>
     </header>
 
       
