--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
         
         <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
 
-        <div class="header-right">
-            <nav>
-                <ul>
-                    <li active><a href="./index.html">ACCUEIL</a></li>
-                    <li><a href="#lessons">LEÇONS</a></li>
-                    <li><a href="#projects">PROJETS</a></li>
-                    <li><a href="#challenges">DÉFIS</a></li>
+        <nav class="nav_bar">
+            <ul>
+                <li active><a href="./index.html">ACCUEIL</a></li>
+                <li><a href="#lessons">LEÇONS</a></li>
+                <li><a href="#projects">PROJETS</a></li>
+                <li><a href="#challenges">DÉFIS</a></li>
 
-                </ul>
-            </nav>
+            </ul>
+        </nav>
+
+        <div class="fas fa-bars"></div>
 
         </div>
 
