--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <nav class="nav_bar">
             <ul>
                 <li active><a href="./index.html">ACCUEIL</a></li>
-                <li><a href="#lessons">LEÇONS</a></li>
-                <li><a href="#projects">PROJETS</a></li>
-                <li><a href="#challenges">DÉFIS</a></li>
+                <li><a href="./lessons.html">LEÇONS</a></li>
+                <li><a href="./projects.html">PROJETS</a></li>
+                <li><a href="#./challenges.html">DÉFIS</a></li>
 
             </ul>
         </nav>
