--- a/lessons.html
+++ b/lessons.html
@@ -6,7 +6,7 @@
     <meta name="author" content="BRUCHON Hugo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Kr[HACK]ademy</title>
+    <title>Kr[HACK]ademy - Leçons</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
@@ -23,8 +23,8 @@
 
         <nav class="nav_bar">
             <ul>
-                <li active><a href="./index.html">ACCUEIL</a></li>
-                <li><a href="./lessons.html">LEÇONS</a></li>
+                <li><a href="./index.html">ACCUEIL</a></li>
+                <li active><a href="./lessons.html">LEÇONS</a></li>
                 <li><a href="./projects.html">PROJETS</a></li>
                 <li><a href="./challenges.html">DÉFIS</a></li>
 
