--- a/lessons.html
+++ b/lessons.html
@@ -10,14 +10,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" type="image/png" href="images/logo_krhacken_r.png" />
+    <link rel="icon" type="image/png" href="images/logo_krhacken_r.webp" />
 
 </head>
 <body>
 
     <header>
 
-        <a href="./index.html"><img src="images/logo_krhacken_invert2.png" alt="logo_krhackademy" width="40" height="40"/></a>
+        <a href="./index.html"><img src="images/logo_krhacken_invert2.webp" alt="logo_krhackademy" width="40" height="40"/></a>
         
         <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
 
