--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" type="image/png" href="images/logo_krhacken_r.webp" />
+    <link rel="icon" type="image/png" href="images/logo_krhacken_r.ico" />
 
 </head>
 <body>
