--- a/lessons.html
+++ b/lessons.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" type="image/png" href="images/logo_krhacken_r.webp" />
+    <link rel="icon" type="image/png" href="images/logo_krhacken_r.ico" />
 
 </head>
 <body>
@@ -41,9 +41,8 @@
 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est earum rem sunt ex, beatae, nostrum omnis sit laboriosam modi at cupiditate incidunt dolor, obcaecati esse dolore laudantium. Sequi, fugiat culpa?
 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur nisi consectetur dicta dolore perferendis nobis maxime dolores a accusantium, iste nemo ut voluptatum quidem neque quas ratione beatae magnam similique.
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 
 
