--- a/index.html
+++ b/index.html
@@ -36,8 +36,43 @@
         </div>
 
     </header>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur iste itaque perspiciatis, ullam perferendis autem, delectus reiciendis consectetur beatae facilis provident minus iusto? Eligendi enim, eaque recusandae quas amet dicta.
+
+    
+
+    <section id="Projets" class="projects">
+        <div class="container">
+            <div class="project-grid">
+                <div class="project-card">
+                    <a href="">
+                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 1">
+                        <div class="project-info">
+                            <h3> Leçons </h3>
+                            <p> Pour apprendre ...</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-card">
+                    <a href="">
+                        <div class="project-info">
+                            <h3> Projets </h3>
+                            <p> Pour en savoir un petit peu plus sur les projets..</p>
+                        </div>
+                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
+                    </a>
+                </div>
+                <div class="project-card">
+                    <a href="">
+                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
+                        <div class="project-info">
+                            <h3> Challenges </h3>
+                            <p> Venez tenter les défis </p>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
