--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="icon" type="image/png" href="images/logo_krhacken_r.ico" />
-
+    
+    <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
 
@@ -39,45 +43,8 @@
 
     
 
-    <section id="Projets" class="projects">
-        <div class="container">
-            <div class="project-grid">
-                <div class="project-card">
-                    <a href="">
-                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 1">
-                        <div class="project-info">
-                            <h3> Leçons </h3>
-                            <p> Pour apprendre ...</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="project-card">
-                    <a href="">
-                        <div class="project-info">
-                            <h3> Projets </h3>
-                            <p> Pour en savoir un petit peu plus sur les projets..</p>
-                        </div>
-                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
-                    </a>
-                </div>
-                <div class="project-card">
-                    <a href="">
-                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
-                        <div class="project-info">
-                            <h3> Challenges </h3>
-                            <p> Venez tenter les défis </p>
-                        </div>
-                    </a>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
+    <script src="js/main.js" defer></script>
 
 
 
