--- a/lessons.html
+++ b/lessons.html
@@ -29,7 +29,40 @@
         </div>
     </header>
 
+    <section id="Projets" class="projects">
+        <div class="container">
+            <div class="project-grid">
+                <div class="project-card">
+                    <a href="">
+                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 1">
+                        <div class="project-info">
+                            <h2> Leçons </h2>
+                            <p> Pour apprendre ...</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-card">
+                    <a href="">
+                        <div class="project-info">
+                            <h2> Projets </h2>
+                            <p> Pour en savoir un petit peu plus sur les projets..</p>
+                        </div>
+                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
+                    </a>
+                </div>
+                <div class="project-card">
+                    <a href="">
+                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
+                        <div class="project-info">
+                            <h2> Challenges </h2>
+                            <p> Venez tenter les défis </p>
+                        </div>
+                    </a>
 
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
