--- a/index.html
+++ b/index.html
@@ -42,43 +42,49 @@
     </header>
 
     <section id="Main">
+        <section id="Presentation">
+            <div id="Logo">
+                <a href="./index.html"><img src="images/logo_krhacken_invert2.webp" alt="logo_krhackademy" width="100px" height="100px"/></a>
+            </div>
+            <div>
 
+            </div>
+        </section>
 
+        <section id="Projets" class="projects">
+            <div class="container">
+                <div class="project-grid">
+                    <div class="project-card">
+                        <a href="">
+                            <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 1">
+                            <div class="project-info">
+                                <h2> Leçons </h2>
+                                <p> Pour apprendre ...</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-card">
+                        <a href="">
+                            <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
+                            <div class="project-info">
+                                <h2> Projets </h2>
+                                <p> Pour en savoir un petit peu plus sur les projets..</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-card">
+                        <a href="">
+                            <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
+                            <div class="project-info">
+                                <h2> Challenges </h2>
+                                <p> Venez tenter les défis </p>
+                            </div>
+                        </a>
 
-    <section id="Projets" class="projects">
-        <div class="container">
-            <div class="project-grid">
-                <div class="project-card">
-                    <a href="">
-                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 1">
-                        <div class="project-info">
-                            <h2> Leçons </h2>
-                            <p> Pour apprendre ...</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="project-card">
-                    <a href="">
-                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
-                        <div class="project-info">
-                            <h2> Projets </h2>
-                            <p> Pour en savoir un petit peu plus sur les projets..</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="project-card">
-                    <a href="">
-                        <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Projet 2">
-                        <div class="project-info">
-                            <h2> Challenges </h2>
-                            <p> Venez tenter les défis </p>
-                        </div>
-                    </a>
-
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     
 
 
