--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="Main">
         <section id="Presentation">
             <div id="Logo">
-                <a href="./index.html"><img src="images/logo_krhacken_invert2.webp" alt="logo_krhackademy" width="100px" height="100px"/></a>
+                <img src="images/logo_krhacken_invert2.webp" alt="logo_krhackademy" width="100px" height="100px"/>
             </div>
             <div>
 
