--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="intro">
             <div class="text_intro">
                 <h2>Apprends la cybersécurité en ligne</h2>
-                <h3>Créé par le Kr[HACK]en pour accompagner les élèves dans leur apprentissage de débutant à expert</h3>
+                <h3>Créé par le Kr[HACK]en pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
 
             <div class="box_container">
