--- a/index.html
+++ b/index.html
@@ -46,27 +46,35 @@
             </div>
 
             <div class="box_container">
-                <div class="box">
-                    <img src="./images/header_background_blured3.webp" alt="Icône Leçons"/>
-                    <div class="box_info">
-                        <h4>Leçons</h4>
-                        <p>Pour découvrir et approfondir vos connaissances</p>
+                <a href="./lessons.html">
+                    <div class="box">
+                       <img src="./images/header_background_blured3.webp" alt="Icône Leçons"/>
+                       <div class="box_info">
+                            <h4>Leçons</h4>
+                            <p>Pour découvrir et approfondir vos connaissances</p>
+                     </div>
                     </div>
-                </div>
-                <div class="box">
-                    <img src="./images/header_background_blured3.webp" alt="Icône Défis"/>
-                    <div class="box_info">
-                        <h4>Défis</h4>
-                        <p>Pour exercer et tester vos compétences</p>
+                </a>
+
+                <a href="./challenges.html">
+                    <div class="box">
+                        <img src="./images/header_background_blured3.webp" alt="Icône Défis"/>
+                        <div class="box_info">
+                            <h4>Défis</h4>
+                            <p>Pour exercer et tester vos compétences</p>
+                        </div>
                     </div>
-                </div>
-                <div class="box">
-                    <img src="./images/header_background_blured3.webp" alt="Icône Projets"/>
-                    <div class="box_info">
-                        <h4>Projets</h4>
-                        <p>Pour mettre en pratique vos compétences et connaissance sur des projets concrets</p>
+                </a>
+
+                <a href="./projects.html">
+                    <div class="box">
+                        <img src="./images/header_background_blured3.webp" alt="Icône Projets"/>
+                        <div class="box_info">
+                            <h4>Projets</h4>
+                            <p>Pour mettre en pratique vos compétences et connaissance sur des projets concrets</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
     </div>
