--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <ul>
                 <li active><a href="./index.html">ACCUEIL</a></li>
                 <li><a href="./lessons.html">LEÇONS</a></li>
+                <li><a href="./challenges.html">CHALLENGES</a></li>
                 <li><a href="./projects.html">PROJETS</a></li>
-                <li><a href="./challenges.html">DÉFIS</a></li>
             </ul>
         </nav>
 
@@ -60,7 +60,7 @@
                     <div class="box">
                         <img src="./images/header_background_blured3.webp" alt="Icône Défis"/>
                         <div class="box_info">
-                            <h4>Défis</h4>
+                            <h4>Challenges</h4>
                             <p>Pour exercer et tester vos compétences</p>
                         </div>
                     </div>
