--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="box_container">
                 <a href="./lessons.html">
                     <div class="box">
-                       <img src="./images/header_background_blured3.webp" alt="Icône Leçons"/>
+                       <img src="./images/lessons.webp" alt="Icône Leçons"/>
                        <div class="box_info">
                             <h4>Leçons</h4>
                             <p>Pour découvrir et approfondir vos connaissances</p>
