--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <a href="./challenges.html">
                     <div class="box">
-                        <img src="./images/header_background_blured3.webp" alt="Icône Défis"/>
+                        <img src="./images/challenges.webp" alt="Icône Défis"/>
                         <div class="box_info">
                             <h4>Challenges</h4>
                             <p>Pour exercer et tester vos compétences</p>
@@ -68,7 +68,7 @@
 
                 <a href="./projects.html">
                     <div class="box">
-                        <img src="./images/header_background_blured3.webp" alt="Icône Projets"/>
+                        <img src="./images/projects.webp" alt="Icône Projets"/>
                         <div class="box_info">
                             <h4>Projets</h4>
                             <p>Pour mettre en pratique vos compétences et connaissance sur des projets concrets</p>
