--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="box_container">
                 <a href="./lessons.html">
-                    <div class="box">
+                    <div class="box_intro">
                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
                        <div class="box_info">
                             <h4>Leçons</h4>
@@ -57,7 +57,7 @@
                 </a>
 
                 <a href="./challenges.html">
-                    <div class="box">
+                    <div class="box_intro">
                         <img src="./images/challenges.webp" alt="Icône Défis"/>
                         <div class="box_info">
                             <h4>Challenges</h4>
@@ -67,7 +67,7 @@
                 </a>
 
                 <a href="./projects.html">
-                    <div class="box">
+                    <div class="box_intro">
                         <img src="./images/projects.webp" alt="Icône Projets"/>
                         <div class="box_info">
                             <h4>Projets</h4>
