--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
         </section>
     </div>
 
+    <section>
 
-    
+    </section>
+
 
     <footer>
         <img src="images/logo.webp" alt="krhacken cybersecurity & ethical hacking">
