ajout titres lessons

--- a/lessons.html
+++ b/lessons.html
@@ -46,8 +46,8 @@
                 <h2>l'ensemble des cours que nous proposons</h2>
             </div>
 
-            <div class="box_container">
-
+            <div class="box_container" class="osint">
+                <h2> OSINT </h2>
                 <a href="pdf/test.pdf">
                     <div class="box_intro">
                         <img src="./images/lessons.webp" alt="Icône Leçons"/>
@@ -57,7 +57,7 @@
                       </div>
                      </div>
                 </a>
-                <a href="pdf/test.pdf">
+                <a href="pdf/test.pdf" >
                     <div class="box_intro">
                         <img src="./images/lessons.webp" alt="Icône Leçons"/>
                         <div class="box_info">
@@ -87,8 +87,8 @@
 
             </div>
 
-            <div class="box_container">
-
+            <div class="box_container" class="web">
+                <h2> WEB </h2>
                 <a href="pdf/test.pdf">
                     <div class="box_intro">
                         <img src="./images/lessons.webp" alt="Icône Leçons"/>
