--- a/index.html
+++ b/index.html
@@ -45,38 +45,46 @@
                 <h3>Créé par le club Kr[HACK]en pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
 
-            <div class="box_container">
-                <a href="./lessons.html">
-                    <div class="box_intro">
-                       <img src="./images/lessons.webp" alt="Icône Leçons"/>
-                       <div class="box_info">
-                            <h4>Leçons</h4>
-                            <p>Pour découvrir et approfondir vos connaissances</p>
-                     </div>
-                    </div>
-                </a>
-
-                <a href="./challenges.html">
-                    <div class="box_intro">
-                        <img src="./images/challenges.webp" alt="Icône Défis"/>
-                        <div class="box_info">
-                            <h4>Challenges</h4>
-                            <p>Pour exercer et tester vos compétences</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="./projects.html">
-                    <div class="box_intro">
-                        <img src="./images/projects.webp" alt="Icône Projets"/>
-                        <div class="box_info">
-                            <h4>Projets</h4>
-                            <p>Pour mettre en pratique vos compétences et connaissance sur des projets concrets</p>
-                        </div>
-                    </div>
-                </a>
+            <div class="image_intro">
+                <img src="./images/logo_krhacken_invert2.webp" alt="logo_krhackademy"/>
             </div>
         </section>
+
+        <section class="intro_2">
+            <div class="box_container">
+                    <a href="./lessons.html">
+                        <div class="box_intro">
+                           <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                           <div class="box_info">
+                                <h4>Leçons</h4>
+                                <p>Pour découvrir et approfondir vos connaissances</p>
+                         </div>
+                        </div>
+                    </a>
+
+                    <a href="./challenges.html">
+                        <div class="box_intro">
+                            <img src="./images/challenges.webp" alt="Icône Défis"/>
+                            <div class="box_info">
+                                <h4>Challenges</h4>
+                                <p>Pour exercer et tester vos compétences</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="./projects.html">
+                        <div class="box_intro">
+                            <img src="./images/projects.webp" alt="Icône Projets"/>
+                            <div class="box_info">
+                                <h4>Projets</h4>
+                                <p>Pour mettre en pratique vos compétences et connaissance sur des projets concrets</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </section>
+
+
     </div>
 
     <section>
