Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="image_intro">
-                <img src="./images/logo_krhacken_invert2.webp" alt="logo_krhackademy"/>
+                <img src="./images/krhacken_laurier.png" alt="logo_krhackademy"/>
             </div>
         </section>
 
