--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </section>
 
-        <section class="intro_2">
+        <section class="presentation">
             <div class="box_container">
                     <a href="./lessons.html">
                         <div class="box_intro">
