--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
     </header>
 
     <div class="main">
+        
         <section class="intro">
             <div class="text_intro">
                 <h2>Apprends la cybersécurité</h2>
                 <h2><span id="dynamic-text" class="glitch" data-text="en ligne"></span></h2>
-                <h3>Créé par le <i>kr[hack]en</i> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
+                <h3>Créé par le <i>Kr[HACK]en</i> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
 
             <div class="image_intro">
@@ -52,39 +53,47 @@
         </section>
 
         <section class="presentation">
+            <div class="text_presentation">
+                <h2>Apprendre - Pratiquer - Réussir</h2>
+            </div>
+
             <div class="box_container">
-                    <a href="./lessons.html">
-                        <div class="box_intro">
-                           <img src="./images/lessons.webp" alt="Icône Leçons"/>
-                           <div class="box_info">
-                                <h4>Leçons</h4>
-                                <p>Pour découvrir et approfondir vos connaissances</p>
-                         </div>
+                <a href="./lessons.html">
+                    <div class="box_intro">
+                       <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                       <div class="box_info">
+                            <h4>Leçons</h4>
+                            <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                     </div>
+                    </div>
+                </a>
+                <a href="./challenges.html">
+                    <div class="box_intro">
+                        <img src="./images/challenges.webp" alt="Icône Défis"/>
+                        <div class="box_info">
+                            <h4>Challenges</h4>
+                            <p>Affrontez des scénarios concrets pour aiguiser vos compétences pratiques</p>
                         </div>
-                    </a>
-
-                    <a href="./challenges.html">
-                        <div class="box_intro">
-                            <img src="./images/challenges.webp" alt="Icône Défis"/>
-                            <div class="box_info">
-                                <h4>Challenges</h4>
-                                <p>Pour exercer et tester vos compétences</p>
-                            </div>
+                    </div>
+                </a>
+                <a href="./projects.html">
+                    <div class="box_intro">
+                        <img src="./images/projects.webp" alt="Icône Projets"/>
+                        <div class="box_info">
+                            <h4>Projets</h4>
+                            <p>Développez des solutions innovantes et travaillez sur des cas pratiques</p>
                         </div>
-                    </a>
+                    </div>
+                </a>
+            </div>
 
-                    <a href="./projects.html">
-                        <div class="box_intro">
-                            <img src="./images/projects.webp" alt="Icône Projets"/>
-                            <div class="box_info">
-                                <h4>Projets</h4>
-                                <p>Pour mettre en pratique vos compétences et connaissance sur des projets concrets</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </section>
+            <h3>Après avoir exploré nos leçons pour comprendre les fondements, testez votre savoir-faire face à des challenges et forgez votre expertise en réalisant des projets concrets. Un parcours complet pour vous propulser vers la réussite et faire de vous un expert de la cybersécurité.</h3>
 
+        </section>
+
+        <section class="nouveaux">
+            <h2></h2>
+        </section>
 
     </div>
 
