--- a/lessons.html
+++ b/lessons.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="leçons projets et défis de cybersécurité">
-    <meta name="keywords" content="Leçons, projets, défis, Kraken, cyber, esisar">
+    <meta name="keywords" content="Leçons, projets, défis, Krhacken, cyber, esisar">
     <meta name="author" content="BRUCHON Hugo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -41,7 +41,6 @@
 
     <div class="main">
         <section class="intro">
-
             <div class="text_intro">
                 <h2>l'ensemble des cours que nous proposons</h2>
             </div>
