--- a/index.html
+++ b/index.html
@@ -92,7 +92,44 @@
         </section>
 
         <section class="nouveaux">
-            <h2></h2>
+
+            <div class="info">
+                <h2>Les nouveautées du moment</h2>
+                <h3>Découvrez nos nouveaux ajouts<h3>
+            </div>
+            
+
+            <div class="filler"></div>
+
+            <div class="box_container">
+                <a href="./lessons.html">
+                    <div class="box_nouveaux">
+                        <div class="box_info">
+                            <h4>Leçons</h4>
+                            <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                        </div>
+                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                    </div>
+                </a>
+                <a href="./challenges.html">
+                    <div class="box_nouveaux">
+                        <div class="box_info">
+                            <h4>Leçons</h4>
+                            <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                        </div>
+                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                    </div>
+                </a>
+                <a href="./projects.html">
+                    <div class="box_nouveaux">
+                        <div class="box_info">
+                            <h4>Leçons</h4>
+                            <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                        </div>
+                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                    </div>
+                </a>
+            </div>
         </section>
 
     </div>
