--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <nav class="nav_bar">
             <ul>
-                <li active><a href="./index.html">ACCUEIL</a></li>
+                <li class="active"><a href="./index.html">ACCUEIL</a></li>
                 <li><a href="./lessons.html">LEÇONS</a></li>
                 <li><a href="./challenges.html">CHALLENGES</a></li>
                 <li><a href="./projects.html">PROJETS</a></li>
@@ -42,9 +42,9 @@
         
         <section class="intro">
             <div class="text_intro">
-                <h2>Apprends la cybersécurité</h2>
-                <h2><span id="dynamic-text" class="glitch" data-text="en ligne"></span></h2>
-                <h3>Créé par le <i>Kr[HACK]en</i> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
+                <h2 class="main-title">Apprends la cybersécurité</h2>
+                <h2 class="main-title"><span id="dynamic-text" class="glitch" data-text="en ligne"></span></h2>
+                <h3 class="subtitle">Créé par le <i>Kr[HACK]en</i> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
 
             <div class="image_intro">
@@ -54,7 +54,7 @@
 
         <section class="presentation">
             <div class="text_presentation">
-                <h2>Apprendre - Pratiquer - Réussir</h2>
+                <h2 class="main-title">Apprendre - Pratiquer - Réussir</h2>
             </div>
 
             <div class="box_container">
@@ -87,46 +87,45 @@
                 </a>
             </div>
 
-            <h3>Après avoir exploré nos leçons pour comprendre les fondements, testez votre savoir-faire face à des challenges et forgez votre expertise en réalisant des projets concrets. Un parcours complet pour vous propulser vers la réussite et faire de vous un expert de la cybersécurité.</h3>
+            <h3 class="subtitle presentation-subtitle">Après avoir exploré nos leçons pour comprendre les fondements, testez votre savoir-faire face à des challenges et forgez votre expertise en réalisant des projets concrets. Un parcours complet pour vous propulser vers la réussite et faire de vous un expert de la cybersécurité.</h3>
 
         </section>
 
         <section class="nouveaux">
 
             <div class="info">
-                <h2>Les nouveautées du moment</h2>
-                <h3>Découvrez nos nouveaux ajouts<h3>
+                <h2 class="main-title">Les nouveautées du moment</h2>
+                <h3 class="subtitle">Découvrez nos nouveaux ajouts<h3>
             </div>
             
-
             <div class="filler"></div>
 
             <div class="box_container">
-                <a href="./lessons.html">
+                <a href="./lessons/nouvelle-lecon-exemple.html">
                     <div class="box_nouveaux">
                         <div class="box_info">
-                            <h4>Leçons</h4>
-                            <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                            <h4>Nouvelle Leçon : Cyber-attaques</h4>
+                            <p>Découvrez les techniques courantes d'attaques et comment les contrer.</p>
                         </div>
-                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                        <img src="./images/lessons.webp" alt="Icône Nouvelle Leçon"/>
                     </div>
                 </a>
-                <a href="./challenges.html">
+                <a href="./challenges/nouveau-challenge-exemple.html">
                     <div class="box_nouveaux">
                         <div class="box_info">
-                            <h4>Leçons</h4>
-                            <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                            <h4>Nouveau Challenge : Forensics</h4>
+                            <p>Mettez vos compétences d'analyse forensique à l'épreuve.</p>
                         </div>
-                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                        <img src="./images/challenges.webp" alt="Icône Nouveau Challenge"/>
                     </div>
                 </a>
-                <a href="./projects.html">
+                <a href="./projects/nouveau-projet-exemple.html">
                     <div class="box_nouveaux">
                         <div class="box_info">
-                            <h4>Leçons</h4>
-                            <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                            <h4>Nouveau Projet : Sécurité Web</h4>
+                            <p>Construisez une application web sécurisée de A à Z.</p>
                         </div>
-                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                        <img src="./images/projects.webp" alt="Icône Nouveau Projet"/>
                     </div>
                 </a>
             </div>
@@ -138,11 +137,10 @@
 
     </section>
 
-
     <footer>
         <img src="images/logo.webp" alt="krhacken cybersecurity & ethical hacking">
         <a href="https://esisar.grenoble-inp.fr" target="_blank"> <img src="images/logo_esisar.webp" alt="Grenoble-INP Esisar"> </a>
-        <h5>L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>EMAIL : contact<i class="far fa-at"></i>krhacken.org
+        <h5>L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>EMAIL : <a href="mailto:contact@krhacken.org">contact<i class="far fa-at"></i>krhacken.org</a>
     </footer>
 
     <script src="js/main.js" defer></script>
