--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <title>Kr[HACK]ademy</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/glitch.css"/>
+    <link rel="stylesheet" href="./css/header.css"/>
+    <link rel="stylesheet" href="./css/intro.css"/>
+    <link rel="stylesheet" href="./css/pres.css"/>
+    <link rel="stylesheet" href="./css/new.css"/>
+    <link rel="stylesheet" href="./css/footer.css"/>
+
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
 
     <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
@@ -52,14 +59,14 @@
             </div>
         </section>
 
-        <section class="presentation">
-            <div class="text_presentation">
+        <section class="pres">
+            <div class="text_pres">
                 <h2 class="main-title">Apprendre - Pratiquer - Réussir</h2>
             </div>
 
             <div class="box_container">
                 <a href="./lessons.html">
-                    <div class="box_intro">
+                    <div class="box_pres">
                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
                        <div class="box_info">
                             <h4>Leçons</h4>
@@ -68,7 +75,7 @@
                     </div>
                 </a>
                 <a href="./challenges.html">
-                    <div class="box_intro">
+                    <div class="box_pres">
                         <img src="./images/challenges.webp" alt="Icône Défis"/>
                         <div class="box_info">
                             <h4>Challenges</h4>
@@ -77,7 +84,7 @@
                     </div>
                 </a>
                 <a href="./projects.html">
-                    <div class="box_intro">
+                    <div class="box_pres">
                         <img src="./images/projects.webp" alt="Icône Projets"/>
                         <div class="box_info">
                             <h4>Projets</h4>
@@ -89,18 +96,17 @@
 
         </section>
 
-        <section class="nouveaux">
-
-            <div class="info">
+        <section class="new">
+            <div class="new_info">
                 <h2 class="main-title">Les nouveautées du moment</h2>
-                <h3 class="subtitle">Découvrez nos nouveaux ajouts<h3>
+                <h3 class="subtitle">Découvrez nos new ajouts<h3>
             </div>
             
             <div class="filler"></div>
 
             <div class="box_container">
                 <a href="./lessons/nouvelle-lecon-exemple.html">
-                    <div class="box_nouveaux">
+                    <div class="box_new">
                         <div class="box_info">
                             <h4>Nouvelle Leçon : Cyber-attaques</h4>
                             <p>Découvrez les techniques courantes d'attaques et comment les contrer.</p>
@@ -109,7 +115,7 @@
                     </div>
                 </a>
                 <a href="./challenges/nouveau-challenge-exemple.html">
-                    <div class="box_nouveaux">
+                    <div class="box_new">
                         <div class="box_info">
                             <h4>Nouveau Challenge : Forensics</h4>
                             <p>Mettez vos compétences d'analyse forensique à l'épreuve.</p>
@@ -118,7 +124,7 @@
                     </div>
                 </a>
                 <a href="./projects/nouveau-projet-exemple.html">
-                    <div class="box_nouveaux">
+                    <div class="box_new">
                         <div class="box_info">
                             <h4>Nouveau Projet : Sécurité Web</h4>
                             <p>Construisez une application web sécurisée de A à Z.</p>
@@ -131,9 +137,6 @@
 
     </div>
 
-    <section>
-
-    </section>
 
     <footer>
         <img src="images/logo.webp" alt="krhacken cybersecurity & ethical hacking">
