--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                        <div class="box_info">
                             <h4>Leçons</h4>
                             <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Option 1</p>
+                            </div>
                      </div>
                     </div>
                 </a>
