--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
                             <h4>Leçons</h4>
                             <p>Découvrez les bases et maîtrisez les concepts clés de la cybersécurité</p>
                             <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Option 1</p>
+                                <i class="far fa-check-square checkbox-icon"></i><p>Théorie Solide</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Apprentissage Progressif</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Ressources Claires</p>
                             </div>
                      </div>
                     </div>
@@ -83,6 +89,15 @@
                         <div class="box_info">
                             <h4>Challenges</h4>
                             <p>Affrontez des scénarios concrets pour aiguiser vos compétences pratiques</p>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Mise en pratique</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Scénarios Réels</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Compétition Amicale</p>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -92,6 +107,15 @@
                         <div class="box_info">
                             <h4>Projets</h4>
                             <p>Développez des solutions innovantes et travaillez sur des cas pratiques</p>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Création Pratique</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Développement de Compétences</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="far fa-check-square checkbox-icon"></i><p>Projets Concrets</p>
+                            </div>
                         </div>
                     </div>
                 </a>
