--- a/lessons.html
+++ b/lessons.html
@@ -12,7 +12,15 @@
     <title>Kr[HACK]ademy</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+
     <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/glitch.css"/>
+    <link rel="stylesheet" href="./css/header.css"/>
+    <link rel="stylesheet" href="./css/intro.css"/>
+    <link rel="stylesheet" href="./css/pres.css"/>
+    <link rel="stylesheet" href="./css/new.css"/>
+    <link rel="stylesheet" href="./css/footer.css"/>
+
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
 
     <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
