--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="leçons projets et défis de cybersécurité">
-    <meta name="keywords" content="Leçons, projets, défis, Krhacken, cyber, esisar">
+    <meta name="description" content="leçons scénarios et défis de cybersécurité">
+    <meta name="keywords" content="Leçons, scénarios, défis, Krhacken, cyber, esisar">
     <meta name="author" content="BRUCHON Hugo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -38,7 +38,7 @@
                 <li class="active"><a href="./index.html">ACCUEIL</a></li>
                 <li><a href="./lessons.html">LEÇONS</a></li>
                 <li><a href="./challenges.html">CHALLENGES</a></li>
-                <li><a href="./projects.html">PROJETS</a></li>
+                <li><a href="./scenarios.html">SCÉNARIOS</a></li>
             </ul>
         </nav>
 
@@ -88,7 +88,7 @@
                         <img src="./images/challenges.webp" alt="Icône Défis"/>
                         <div class="box_info">
                             <h4>Challenges</h4>
-                            <p>Affrontez des scénarios concrets pour aiguiser vos compétences pratiques et développer votre esprit critique en matière de cybersécurité.</p>
+                            <p>Affrontez des scénarios concrets pour aiguiser vos compétences pratiques et développer vos compétences en cybersécurité.</p>
                             <div class="check_box">
                                 <i class="far fa-check-square checkbox-icon"></i><p>Mise en pratique</p>
                             </div>
@@ -101,20 +101,20 @@
                         </div>
                     </div>
                 </a>
-                <a href="./projects.html">
+                <a href="./scenarios.html">
                     <div class="box_pres">
-                        <img src="./images/projects.webp" alt="Icône Projets"/>
+                        <img src="./images/scenarios.webp" alt="Icône Scénarios"/>
                         <div class="box_info">
-                            <h4>Projets</h4>
-                            <p>Développez des solutions innovantes et travaillez sur des cas pratiques pour consolider vos acquis et construire un portfolio solide en cybersécurité.</p>
+                            <h4>Scénarios</h4>
+                            <p>Validez vos aptitudes pratiques et vos acquis théoriques en suivant nos scénarios guidés pour completer votre profil</p>
                             <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Création Pratique</p>
+                                <i class="far fa-check-square checkbox-icon"></i><p>Cyber-attaques guidées</p>
                             </div>
                             <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Développement de Compétences</p>
+                                <i class="far fa-check-square checkbox-icon"></i><p>Découverte d'outils puissants</p>
                             </div>
                             <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Projets Concrets</p>
+                                <i class="far fa-check-square checkbox-icon"></i><p>Guidés et réalistes</p>
                             </div>
                         </div>
                     </div>
